manifests/zwavejs2mqtt/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwavejs2mqtt-us
  labels:
    gateway: private
    app: zwavejs2mqtt-us
spec:
  hostnames:
    - zwave-us.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: zwavejs2mqtt-us
          port: 80
